--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          IMAGE_NAME=your-dockerhub-username/caprover-sample-react
+          IMAGE_NAME=${{ secret.DOCKER_USERNAME }}/caprover-sample-react
           TAG=$(git rev-parse --short HEAD)
           docker build -t $IMAGE_NAME:$TAG .
           docker push $IMAGE_NAME:$TAG
